force-app/main/default/objects/Quote/fields/BillingEntity__c.field-meta.xml
<CustomField><fullName>BillingEntity__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Entité de facturation</label><referenceTo>BillingEntity__c</referenceTo><relationshipLabel>Devis</relationshipLabel><relationshipName>Quotes</relationshipName><required>false</required><type>Lookup</type></CustomField>