force-app/main/default/objects/Quote/fields/BillingFramework__c.field-meta.xml
<CustomField><fullName>BillingFramework__c</fullName><defaultValue>&quot;A1&quot;</defaultValue><label>Cadre de facturation Chorus</label><length>10</length><required>false</required><type>Text</type></CustomField>