force-app/main/default/objects/Quote/fields/RecipientSiret__c.field-meta.xml
<CustomField><fullName>RecipientSiret__c</fullName><label>SIRET destinataire</label><length>14</length><required>false</required><type>Text</type></CustomField>