force-app/main/default/objects/Quote/fields/TaxAmount__c.field-meta.xml
<CustomField><fullName>TaxAmount__c</fullName><defaultValue>0</defaultValue><label>TVA</label><precision>18</precision><required>true</required><scale>2</scale><type>Currency</type></CustomField>