force-app/main/default/objects/Quote/fields/TotalIncludingTax__c.field-meta.xml
<CustomField><fullName>TotalIncludingTax__c</fullName><defaultValue>0</defaultValue><label>Total TTC</label><precision>18</precision><required>true</required><scale>2</scale><type>Currency</type></CustomField>